
    HDFS-7208. NN doesn't schedule replication when a DN storage fails.
    (Ming Ma via szetszwo)

    HDFS-5089. When a LayoutVersion support SNAPSHOT, it must support
    FSIMAGE_NAME_OPTIMIZATION.  (szetszwo)

    HDFS-7260. Change DFSOutputStream.MAX_PACKETS to be configurable. (szetszwo)

    HDFS-7259. Unresponseive NFS mount point due to deferred COMMIT response.
    (brandonli)

    BREAKDOWN OF HDFS-6581 SUBTASKS AND RELATED JIRAS
  
      HDFS-6921. Add LazyPersist flag to FileStatus. (Arpit Agarwal)
  
      HDFS-6924. Add new RAM_DISK storage type. (Arpit Agarwal)
  
      HDFS-6922. Add LazyPersist flag to INodeFile, save it in FsImage and
      edit logs. (Arpit Agarwal)
    
      HDFS-6923. Propagate LazyPersist flag to DNs via DataTransferProtocol.
      (Arpit Agarwal)
  
      HDFS-6925. DataNode should attempt to place replicas on transient storage
      first if lazyPersist flag is received. (Arpit Agarwal)
  
      HDFS-6926. DN support for saving replicas to persistent storage and
      evicting in-memory replicas. (Arpit Agarwal)
  
      HDFS-6927. Initial unit tests for lazy persist files. (Arpit Agarwal)
  
      HDFS-6929. NN periodically unlinks lazy persist files with missing
      replicas from namespace. (Arpit Agarwal)
  
      HDFS-6928. 'hdfs put' command should accept lazyPersist flag for testing.
      (Arpit Agarwal)
  
      HDFS-6960. Bugfix in LazyWriter, fix test case and some refactoring.
      (Arpit Agarwal)
  
      HDFS-6931. Move lazily persisted replicas to finalized directory on DN
      startup. (Arpit Agarwal)
  
      HDFS-6950. Add Additional unit tests for HDFS-6581. (Xiaoyu Yao via
      Arpit Agarwal)
  
      HDFS-6930. Improve replica eviction from RAM disk. (Arpit Agarwal)
  
      HDFS-6977. Delete all copies when a block is deleted from the block space.
      (Arpit Agarwal)
  
      HDFS-6991. Notify NN of evicted block before deleting it from RAM disk.
      (Arpit Agarwal)
  